# arbitrage-bot

./: .gitignore  Dockerfile  devnet.json  docker-compose.yml  pyproject.toml
src/: __main__.py  config.py  executor.py  init.py
src/clients/: base_dex_client.py  jupiter_client.py  meteora_client.py  orca_client.py  raydium_client.py  solana_client.py
src/graph/: arbitrage_path_finder.py  bellman_ford.py  finder.py
src/optimizer/: volume.py
